Fixed so main is also taken into account in makefile

--- a/diff_eqs/Makefile
+++ b/diff_eqs/Makefile
@@ -8,8 +8,13 @@ CFLAGS = -I$(IDIR)
 SRC := $(wildcard $(SDIR)/*.c)
 OBJ := $(patsubst $(SDIR)/%.c,$(ODIR)/%.o,$(SRC))
 
+
 output: $(OBJ)
 	$(CC) -o $@ $^ $(CFLAGS)
+	@echo "Build successful!"
+
+$(ODIR)/main.o: $(SDIR)/main.c
+	$(CC) -c -o $@ $< $(CFLAGS)
 
 $(ODIR)/%.o: $(SDIR)/%.c $(IDIR)/%.h
 	$(CC) -c -o $@ $< $(CFLAGS)
